--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+NODE_ENV=yourworkenvironment
 MONGO_URI=mongodb://localhost:27017/mydatabase
 SESSION_SECRET=mysecretkey
 PASSPORT_GITHUB_CLIENT_ID=yourgithubclientid
